<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="3dp"
>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="56dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_id_text"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_firstname"
        android:layout_width="111dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/tv_firstname_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="113dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:text="@string/tv_lastname_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_firstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_firstname" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="98dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="31dp"
        android:text="@string/btn_update_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_firstname"
        app:layout_constraintTop_toTopOf="@+id/tv_firstname"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="98dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_delete_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_update"
        app:layout_constraintTop_toTopOf="@+id/btn_update" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>